--- a/Aventura-e-Trilha/styles.css
+++ b/Aventura-e-Trilha/styles.css
@@ -78,7 +78,7 @@ p {
 }
 
 
-#oferta {
+#servicos {
     color: rgb(9, 255, 0);
 }
 
@@ -185,4 +185,5 @@ footer {
     gap: 20px;
     justify-content: center;
     display: flex;
+
 }
